1. Fixed the resume link on mobile bug 2. Changed the height of the navigation 3. Added transition for the show more projects button

--- a/Responsive-Web-Design-Projects/Build a Personal Portfolio Webpage/css/app.css
+++ b/Responsive-Web-Design-Projects/Build a Personal Portfolio Webpage/css/app.css
@@ -7,6 +7,7 @@
 :root {
   --font--normal: 400;
   --font--bold: 700;
+  --nav--height: 215px;
   --color--primary: #5f6caf;
   --color--dark: #000839;
   --purple: #856c8b;
@@ -141,8 +142,7 @@ h3 {
 .show-navigation .nav__list {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  height: 212px;
+  height: var(--nav--height);
   animation: 0.25s ease-in-out fadeIn;
 }
 
@@ -153,7 +153,7 @@ h3 {
   line-height: 1.7;
   text-decoration: none;
   text-transform: uppercase;
-  font-weight: var(--font--normal);
+  font-weight: var(--font--bold);
   letter-spacing: 1px;
   color: var(--white);
   transition: background-color 0.25s ease-in-out;
@@ -441,6 +441,8 @@ h3 {
   border: 3px solid currentColor;
   background-color: var(--white);
   cursor: pointer;
+  transition: all 0.25s ease-in-out;
+  transition-property: background-color, color, border-color;
 }
 
 .show-more-projects:hover {
@@ -550,18 +552,18 @@ h3 {
 @keyframes fadeOut {
   0% {
     opacity: 1;
-    height: 212px;
+    height: var(--nav--height);
     transform: translate3d(0, 0, 0);
   }
 
   50% {
     opacity: 1;
-    height: 212px;
+    height: var(--nav--height);
     transform: translate3d(70%, 0, 0);
   }
   75% {
     opacity: 1;
-    height: 212px;
+    height: var(--nav--height);
     transform: translate3d(100%, 0, 0);
   }
   100% {
